Adding pulsar kubernetes manifest and add database data connection

--- a/kubernetes/staging/k8s-deployment.tmpl
+++ b/kubernetes/staging/k8s-deployment.tmpl
@@ -31,11 +31,47 @@ spec:
                 configMapKeyRef:
                   name: data-processor-configmap
                   key: APP_NAME
+            - name: "PULSAR_HOST"
+              valueFrom:
+                configMapKeyRef:
+                  name: data-processor-configmap
+                  key: PULSAR_HOST
+            - name: "BROKER_HOST"
+              valueFrom:
+                configMapKeyRef:
+                  name: data-processor-configmap
+                  key: BROKER_HOST
             - name: "PHRASE_KEY"
               valueFrom:
                 secretKeyRef:
                   name: data-processor-secrets
                   key: PHRASE_KEY
+            - name: "DB_USER"
+              valueFrom:
+                secretKeyRef:
+                  name: data-processor-secrets
+                  key: DB_USER
+            - name: "DB_PASSWORD"
+              valueFrom:
+                secretKeyRef:
+                  name: data-processor-secrets
+                  key: DB_PASSWORD
+            - name: "DB_NAME"
+              valueFrom:
+                secretKeyRef:
+                  name: data-processor-secrets
+                  key: DB_NAME
+            - name: "DB_PORT"
+              valueFrom:
+                secretKeyRef:
+                  name: data-processor-secrets
+                  key: DB_PORT
+            - name: "DB_HOST"
+              valueFrom:
+                secretKeyRef:
+                  name: data-processor-secrets
+                  key: DB_HOST
+
           ports:
             - containerPort: 5000
           resources:
