--- a/kubernetes/staging/k8s-secrets.tmpl
+++ b/kubernetes/staging/k8s-secrets.tmpl
@@ -4,3 +4,8 @@ metadata:
   name: data-processor-secrets
 stringData:
   PHRASE_KEY: "{{PHRASE_KEY}}"
+  DB_USER: "{{DB_USER}}"
+  DB_PASSWORD: "{{DB_PASSWORD}}"
+  DB_NAME: "{{DB_NAME}}"
+  DB_PORT: "{{DB_PORT}}"
+  DB_HOST: "{{DB_HOST}}"
